feat: adiciona toolbar com include no fragment_list_cards.xml

--- a/app/src/main/res/layout/fragment_list_cards.xml
+++ b/app/src/main/res/layout/fragment_list_cards.xml
@@ -4,45 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollViewListCards"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/purple">
+    android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/imageButtonBackAllCategories"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="22dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:backgroundTint="@color/purple"
-        android:contentDescription="@string/image_about_the_card"
-        android:src="@drawable/ic_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/inter_bold"
-        android:textColor="@color/white"
-        android:textFontWeight="700"
-        android:textSize="24sp"
+    <include
+        android:id="@+id/toolbar"
+        app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/title_list_cards" />
-
-
+        layout="@layout/partial_toolbar"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="55dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
