--- a/app/src/main/res/layout/fragment_create_new_card.xml
+++ b/app/src/main/res/layout/fragment_create_new_card.xml
@@ -162,7 +162,7 @@
                 android:layout_width="25dp"
                 android:layout_height="50dp"
                 android:elevation="5dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/buttonSave"
                 app:layout_constraintEnd_toEndOf="@+id/buttonSave"
                 app:layout_constraintStart_toStartOf="@+id/buttonSave"
