feat: remover campo de pesquisa da home fragment

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,43 +125,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ViewMessage" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputSearch"
-                style="@style/InputLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="25dp"
-                android:layout_marginTop="15dp"
-                android:background="@color/purple"
-                app:endIconMode="clear_text"
-                app:hintEnabled="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewTheAdviceAbove">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/textInputSearchIcon"
-                    style="@style/TextInputEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/search"
-                    android:imeOptions="actionSearch"
-                    android:inputType="text" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <ImageButton
-                android:id="@+id/imageViewSearchButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:background="@color/white"
-                android:contentDescription="@string/icone_de_pesquisa"
-                android:src="@drawable/ic_search"
-                app:layout_constraintBottom_toBottomOf="@+id/textInputSearch"
-                app:layout_constraintStart_toStartOf="@+id/textInputSearch"
-                app:layout_constraintTop_toTopOf="@+id/textInputSearch" />
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayoutExternal"
                 android:layout_width="0dp"
@@ -172,7 +135,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textInputSearch"
+                app:layout_constraintTop_toBottomOf="@+id/textViewTheAdviceAbove"
                 app:layout_constraintVertical_bias="0.0" >
 
                 <ProgressBar
