feat: adiciona barra de pesquisa na listcardfragment

--- a/app/src/main/res/layout/fragment_list_cards.xml
+++ b/app/src/main/res/layout/fragment_list_cards.xml
@@ -4,22 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollViewListCards"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/purple">
 
     <include
         android:id="@+id/toolbar"
-        app:layout_constraintStart_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        layout="@layout/partial_toolbar"
-        />
+        android:layout_marginTop="20dp"
+        android:paddingBottom="10dp"
+        layout="@layout/partial_toolbar" />
+
+    <include
+        android:id="@+id/searchbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        layout="@layout/partial_searchbar"
+        android:layout_marginTop="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/searchbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
