--- a/app/src/main/res/layout/partial_searchbar.xml
+++ b/app/src/main/res/layout/partial_searchbar.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/purple">
@@ -10,10 +9,9 @@
         android:id="@+id/textInputSearch"
         style="@style/InputLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:background="@color/purple"
         app:endIconMode="clear_text"
         app:hintEnabled="false"
@@ -26,6 +24,7 @@
             android:id="@+id/textInputSearchIcon"
             style="@style/TextInputEditText"
             android:layout_width="match_parent"
+            android:textSize="12sp"
             android:layout_height="wrap_content"
             android:hint="@string/search"
             android:imeOptions="actionSearch"/>
