feat: adiciona filtros de pesquisa na listCardsFragment

--- a/app/src/main/res/layout/fragment_list_cards.xml
+++ b/app/src/main/res/layout/fragment_list_cards.xml
@@ -28,13 +28,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+    <include
+        android:id="@+id/filterSortBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        layout="@layout/partial_filters_sort"
+        android:layout_marginTop="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchbar" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
-        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchbar"
+        app:layout_constraintTop_toBottomOf="@+id/filterSortBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
