--- a/app/src/main/res/layout/partial_toolbar.xml
+++ b/app/src/main/res/layout/partial_toolbar.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/imageButtonSecond"
         android:layout_width="0dp"
         android:layout_height="15dp"
         android:background="?attr/selectableItemBackgroundBorderless"
