fix: corrigindo cor do botão back

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="gray_dark">#7D7D7D</color>
     <color name="green">#03AD00</color>
     <color name="red">#FF0000</color>
+    <color name="purple_bottom_back"> #4DFFFFFF</color>
 </resources>
