--- a/app/src/main/res/layout/partial_toolbar.xml
+++ b/app/src/main/res/layout/partial_toolbar.xml
@@ -12,7 +12,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/rounded_textview"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="@color/purple_bottom_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,7 +48,7 @@
         android:layout_marginEnd="20dp"
         android:visibility="invisible"
         android:background="@drawable/rounded_textview"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="@color/purple_bottom_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
