feat: criando funções para filtros da lista de cards

--- a/app/src/main/res/layout/partial_filters_sort.xml
+++ b/app/src/main/res/layout/partial_filters_sort.xml
@@ -41,6 +41,7 @@
             app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/filterDescription"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,18 +49,21 @@
                 android:text="@string/description" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/filterDate"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/date" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/filterCategory"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/category" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/filterFavorites"
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
