--- a/app/src/main/res/layout/partial_filters_sort.xml
+++ b/app/src/main/res/layout/partial_filters_sort.xml
@@ -12,6 +12,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
         android:text="@string/sort_by"
+        android:fontFamily="@font/inter_bold"
         android:textColor="@color/purple"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
