--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="64dp"
+        android:fontFamily="@font/inter_bold"
         android:text="@string/password_keeper"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -26,6 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
+        android:fontFamily="@font/inter_bold"
         android:text="@string/subtitle"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -125,6 +127,7 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:backgroundTint="@color/purple"
+        android:fontFamily="@font/inter_bold"
         android:text="@string/sign_in"
         android:textColor="@color/white"
         android:textSize="12sp"
@@ -139,6 +142,7 @@
         android:layout_height="50dp"
         android:backgroundTint="@color/white"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/inter_bold"
         android:text="@string/sign_up"
         android:textColor="@color/purple"
         android:textSize="12sp"
@@ -153,6 +157,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:text="@string/or"
+        android:fontFamily="@font/inter_bold"
         android:textColor="@color/purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -190,6 +195,7 @@
         android:backgroundTint="@color/white"
         android:text="@string/sign_in_with_google"
         android:textColor="@color/purple"
+        android:fontFamily="@font/inter_bold"
         android:textSize="12sp"
         app:cornerRadius="30dp"
         app:icon="@drawable/ic_google"
