feature: colocando fonts nos text view da tela signUp

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -29,10 +29,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginTop="20dp"
+            android:fontFamily="@font/inter_bold"
             android:text="@string/sign_up_title"
             android:textColor="@color/white"
             android:textSize="24sp"
-
             app:layout_constraintEnd_toStartOf="@+id/imageViewSignUp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imageButtonBack" />
@@ -54,10 +54,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/inter_bold"
             android:text="@string/sign_up_to_join"
             android:textColor="@color/white"
             android:textSize="16sp"
-
             app:layout_constraintEnd_toStartOf="@+id/imageViewSignUp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewSignUpTitle" />
@@ -81,6 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
+            android:fontFamily="@font/inter_bold"
             android:text="@string/just_a_few_steps"
             android:textColor="@color/purple"
             android:textSize="16sp"
@@ -200,6 +201,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="55dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/inter_regular"
             android:text="@string/your_password_must_have"
             android:textColor="@color/purple"
             android:textSize="14sp"
@@ -212,6 +214,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="55dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/inter_regular"
             android:text="@string/at_least_1_upper_case_letter"
             android:textColor="@color/gray_dark"
             android:textSize="12sp"
@@ -224,6 +227,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="55dp"
             android:layout_marginTop="6dp"
+            android:fontFamily="@font/inter_regular"
             android:text="@string/at_least_1_lower_case_letter"
             android:textColor="@color/gray_dark"
             android:textSize="12sp"
@@ -236,6 +240,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="55dp"
             android:layout_marginTop="6dp"
+            android:fontFamily="@font/inter_regular"
             android:text="@string/at_least_1_special_character_amp"
             android:textColor="@color/gray_dark"
             android:textSize="12sp"
@@ -248,6 +253,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="55dp"
             android:layout_marginTop="6dp"
+            android:fontFamily="@font/inter_regular"
             android:text="@string/at_least_1_numeric_character"
             android:textColor="@color/gray_dark"
             android:textSize="12sp"
@@ -260,6 +266,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="55dp"
             android:layout_marginTop="6dp"
+            android:fontFamily="@font/inter_regular"
             android:text="@string/at_least_16_characteres"
             android:textColor="@color/gray_dark"
             android:textSize="12sp"
@@ -273,6 +280,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
             android:backgroundTint="@color/purple"
+            android:fontFamily="@font/inter_bold"
             android:text="@string/create_an_account"
             android:textColor="@color/white"
             android:textSize="12sp"
